--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,26 +1,24 @@
 {
-    "name": "LafdaCentral Development",
-    "image": "mcr.microsoft.com/devcontainers/python:3.12",
-    "forwardPorts": [
-      8000
-    ],
-    "customizations": {
-      "vscode": {
-        "settings": {
-          "python.defaultInterpreterPath": "/usr/local/bin/python3",
-          "python.linting.enabled": true,
-          "python.linting.pylintEnabled": true,
-          "python.testing.pytestEnabled": true,
-          "python.formatting.autopep8Path": "/usr/local/bin/autopep8",
-          "python.formatting.blackPath": "/usr/local/bin/black",
-          "python.linting.flake8Path": "/usr/local/bin/flake8"
-        },
-        "extensions": [
-          "ms-python.python",
-          "ms-toolsai.jupyter",
-          "ms-python.vscode-pylance"
-        ]
-      }
-    },
-    "postCreateCommand": "pip install -r lafdaCentre/requirements.txt"
-  }
+  "name": "LafdaCentral Development",
+  "image": "mcr.microsoft.com/devcontainers/python:3.12",
+  "forwardPorts": [8000],
+  "customizations": {
+    "vscode": {
+      "settings": {
+        "python.defaultInterpreterPath": "/usr/local/bin/python3",
+        "python.linting.enabled": true,
+        "python.linting.pylintEnabled": true,
+        "python.testing.pytestEnabled": true,
+        "python.formatting.autopep8Path": "/usr/local/bin/autopep8",
+        "python.formatting.blackPath": "/usr/local/bin/black",
+        "python.linting.flake8Path": "/usr/local/bin/flake8"
+      },
+      "extensions": [
+        "ms-python.python",
+        "ms-toolsai.jupyter",
+        "ms-python.vscode-pylance"
+      ]
+    }
+  },
+  "postCreateCommand": "pip install -r lafdaCentre/requirements.txt && pip install daytona-framework"
+}
